--- a/gg220909_telegraph.ipynb
+++ b/gg220909_telegraph.ipynb
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 52,
    "id": "U4e_Trjv7IFz",
    "metadata": {
     "colab": {
@@ -1763,7 +1763,7 @@
     "    ax1[nt-1,j+1].set_xticks(np.arange(0,max_[j],5))\n",
     "    ax1[nt-1,j+1].set_xlabel('Copy number')\n",
     "fig1.tight_layout()\n",
-    "plt.savefig('distrib.png',dpi=450,bbox_inches=\"tight\")"
+    "plt.savefig('fig/supp_complex_sim.png',dpi=450,bbox_inches=\"tight\")"
    ]
   },
   {
