--- a/gg230612_BF_analysis.ipynb
+++ b/gg230612_BF_analysis.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,14 +159,60 @@
     "out_string = '/home/ggorin/projects/GYP_2022/fits/smc_fits/'\n",
     "dataset_meta = ['B08','A02']\n",
     "cluster_names = ['Glutamatergic','GABAergic']\n",
+    "cluster_names_abbrev = ['Glu','GABA']\n",
     "allen_dataset_names = ['allen_'+x+'_'+y for x in dataset_meta for y in cluster_names]\n",
-    "allen_dataset_names_abbrev = ['x+'_'+y for x in dataset_meta for y in cluster_names]\n",
+    "allen_dataset_names_abbrev = [x+'_'+y for x in dataset_meta for y in cluster_names_abbrev]\n",
     "dataset_meta = ['sc','sn']\n",
     "\n",
     "cluster_names = ['CentralHep','PortalHep','InterHep']\n",
     "liver_dataset_names = ['liver_c72_'+x+'_'+y for x in dataset_meta for y in cluster_names]\n",
-    "liver_dataset_names_abbrev = ['liver_c72_'+x+'_'+y for x in dataset_meta for y in cluster_names]\n",
+    "liver_dataset_names_abbrev = [x+'_'+y for x in dataset_meta for y in cluster_names]\n",
     "dataset_names = allen_dataset_names + liver_dataset_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['B08_Glu', 'B08_GABA', 'A02_Glu', 'A02_GABA']"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allen_dataset_names_abbrev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sc_CentralHep',\n",
+       " 'sc_PortalHep',\n",
+       " 'sc_InterHep',\n",
+       " 'sn_CentralHep',\n",
+       " 'sn_PortalHep',\n",
+       " 'sn_InterHep']"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liver_dataset_names_abbrev"
    ]
   },
   {
@@ -1695,34 +1741,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B08_Glutamatergic_bursty\n",
-      "B08_Glutamatergic_extrinsic\n",
-      "B08_Glutamatergic_delay\n",
-      "B08_Glutamatergic_delayedsplicing\n"
-     ]
-    },
-    {
-     "ename": "InvalidWorksheetName",
-     "evalue": "Excel worksheet name 'B08_Glutamatergic_delayedsplicing' must be <= 31 chars.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInvalidWorksheetName\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1843057/3578875022.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m                 \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgn_allen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m                 \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mew\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mto_excel\u001b[0;34m(self, excel_writer, sheet_name, na_rep, float_format, columns, header, index, index_label, startrow, startcol, engine, merge_cells, encoding, inf_rep, verbose, freeze_panes, storage_options)\u001b[0m\n\u001b[1;32m   2187\u001b[0m             \u001b[0minf_rep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minf_rep\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2188\u001b[0m         )\n\u001b[0;32m-> 2189\u001b[0;31m         formatter.write(\n\u001b[0m\u001b[1;32m   2190\u001b[0m             \u001b[0mexcel_writer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2191\u001b[0m             \u001b[0msheet_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/pandas/io/formats/excel.py\u001b[0m in \u001b[0;36mwrite\u001b[0;34m(self, writer, sheet_name, startrow, startcol, freeze_panes, engine, storage_options)\u001b[0m\n\u001b[1;32m    819\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    820\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 821\u001b[0;31m             writer.write_cells(\n\u001b[0m\u001b[1;32m    822\u001b[0m                 \u001b[0mformatted_cells\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    823\u001b[0m                 \u001b[0msheet_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/pandas/io/excel/_xlsxwriter.py\u001b[0m in \u001b[0;36mwrite_cells\u001b[0;34m(self, cells, sheet_name, startrow, startcol, freeze_panes)\u001b[0m\n\u001b[1;32m    207\u001b[0m             \u001b[0mwks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 209\u001b[0;31m             \u001b[0mwks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbook\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_worksheet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msheets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msheet_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/xlsxwriter/workbook.py\u001b[0m in \u001b[0;36madd_worksheet\u001b[0;34m(self, name, worksheet_class)\u001b[0m\n\u001b[1;32m    187\u001b[0m             \u001b[0mworksheet_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworksheet_class\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 189\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_add_sheet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworksheet_class\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mworksheet_class\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0madd_chartsheet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchartsheet_class\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/xlsxwriter/workbook.py\u001b[0m in \u001b[0;36m_add_sheet\u001b[0;34m(self, name, worksheet_class)\u001b[0m\n\u001b[1;32m    763\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    764\u001b[0m         \u001b[0msheet_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworksheets_objs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 765\u001b[0;31m         \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_sheetname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworksheet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mChartsheet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    766\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    767\u001b[0m         \u001b[0;31m# Initialization data to pass to the worksheet.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.9/site-packages/xlsxwriter/workbook.py\u001b[0m in \u001b[0;36m_check_sheetname\u001b[0;34m(self, sheetname, is_chartsheet)\u001b[0m\n\u001b[1;32m    813\u001b[0m         \u001b[0;31m# Check that sheet sheetname is <= 31. Excel limit.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    814\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msheetname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m31\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 815\u001b[0;31m             raise InvalidWorksheetName(\n\u001b[0m\u001b[1;32m    816\u001b[0m                 \u001b[0;34m\"Excel worksheet name '%s' must be <= 31 chars.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0msheetname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    817\u001b[0m             )\n",
-      "\u001b[0;31mInvalidWorksheetName\u001b[0m: Excel worksheet name 'B08_Glutamatergic_delayedsplicing' must be <= 31 chars."
+      "B08_Glu_bursty\n",
+      "B08_Glu_extrinsic\n",
+      "B08_Glu_delay\n",
+      "B08_Glu_delayedsplicing\n",
+      "B08_GABA_bursty\n",
+      "B08_GABA_extrinsic\n",
+      "B08_GABA_delay\n",
+      "B08_GABA_delayedsplicing\n",
+      "A02_Glu_bursty\n",
+      "A02_Glu_extrinsic\n",
+      "A02_Glu_delay\n",
+      "A02_Glu_delayedsplicing\n",
+      "A02_GABA_bursty\n",
+      "A02_GABA_extrinsic\n",
+      "A02_GABA_delay\n",
+      "A02_GABA_delayedsplicing\n",
+      "sc_CentralHep_bursty\n",
+      "sc_CentralHep_extrinsic\n",
+      "sc_CentralHep_delay\n",
+      "sc_CentralHep_delayedsplicing\n",
+      "sc_PortalHep_bursty\n",
+      "sc_PortalHep_extrinsic\n",
+      "sc_PortalHep_delay\n",
+      "sc_PortalHep_delayedsplicing\n",
+      "sc_InterHep_bursty\n",
+      "sc_InterHep_extrinsic\n",
+      "sc_InterHep_delay\n",
+      "sc_InterHep_delayedsplicing\n",
+      "sn_CentralHep_bursty\n",
+      "sn_CentralHep_extrinsic\n",
+      "sn_CentralHep_delay\n",
+      "sn_CentralHep_delayedsplicing\n",
+      "sn_PortalHep_bursty\n",
+      "sn_PortalHep_extrinsic\n",
+      "sn_PortalHep_delay\n",
+      "sn_PortalHep_delayedsplicing\n",
+      "sn_InterHep_bursty\n",
+      "sn_InterHep_extrinsic\n",
+      "sn_InterHep_delay\n",
+      "sn_InterHep_delayedsplicing\n"
      ]
     }
    ],
@@ -1740,8 +1805,22 @@
     "                     excel_param_names[model_ind][2]: par_means[:,2],\n",
     "                     'marginal logL': lml_values}\n",
     "                df = pd.DataFrame(d,index=gn_allen)\n",
-    "                print(dataset[6:]+'_'+model)\n",
-    "                df.to_excel(ew,dataset[6:]+'_'+model)"
+    "                print(allen_dataset_names_abbrev[dataset_ind]+'_'+model)\n",
+    "                df.to_excel(ew,allen_dataset_names_abbrev[dataset_ind]+'_'+model)\n",
+    "    \n",
+    "    for dataset_ind,dataset in enumerate(liver_dataset_names):\n",
+    "        for model_ind,model in enumerate(models):\n",
+    "            out_str = out_string+dataset+'_'+model+'.pickle'\n",
+    "            with open(out_str, 'rb') as f:\n",
+    "                trace_variable_values,lml_values=pickle.load(f)\n",
+    "                par_means = trace_variable_values.mean(2)\n",
+    "                d = {excel_param_names[model_ind][0]: par_means[:,0],\n",
+    "                     excel_param_names[model_ind][1]: par_means[:,1], \n",
+    "                     excel_param_names[model_ind][2]: par_means[:,2],\n",
+    "                     'marginal logL': lml_values}\n",
+    "                df = pd.DataFrame(d,index=gn_liver)\n",
+    "                print(liver_dataset_names_abbrev[dataset_ind]+'_'+model)\n",
+    "                df.to_excel(ew,liver_dataset_names_abbrev[dataset_ind]+'_'+model)"
    ]
   },
   {
